fixing blurry images

--- a/src/Roadmap.scss
+++ b/src/Roadmap.scss
@@ -21,7 +21,7 @@
     position: absolute;
     bottom: 34%;
     right: 23%;
-    animation: animate 1s linear infinite;
+    animation: animate 2s linear infinite;
     @media screen and (min-width: 320px) and (max-width: 767px) {
       width: 24px !important;
       height: 24px !important;
@@ -31,7 +31,7 @@
     position: absolute;
     bottom: 39%;
     right: 16%;
-    animation: animate 1s linear infinite;
+    animation: animate 2s linear infinite;
     @media screen and (min-width: 320px) and (max-width: 767px) {
       width: 24px !important;
       height: 24px !important;
